<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/rll"
        android:background="@color/theme"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/iv_btn_left"
            android:layout_centerVertical="true"
            android:src="@drawable/fanhui"
            android:layout_marginLeft="15dp"
            android:layout_width="25dp"
            android:layout_height="25dp" />
        <TextView
            android:textColor="#ffffff"
            android:text="@string/register_user"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="20dp"
        android:id="@+id/til1"
        android:layout_below="@+id/rll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:inputType="number"
            android:hint="@string/mobilephone"
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="20dp"
        android:id="@+id/til2"
        android:layout_below="@+id/til1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:inputType="number"
            android:hint="@string/identify_code"
            android:id="@+id/et_verCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:text="@string/get_code"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:id="@+id/btn_getCode"
        android:background="@drawable/blue_btn_text"
        android:layout_alignTop="@+id/til2"
        android:layout_alignEnd="@+id/btn_next" />
    <Button
        android:textColor="#ffffff"
        android:id="@+id/btn_next"
        android:layout_below="@+id/til2"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/next"
        android:textSize="16sp"
        android:background="@drawable/btn_login_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>

