<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/rll"
        android:background="@color/theme"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/iv_btn_left"
            android:layout_centerVertical="true"
            android:src="@drawable/fanhui"
            android:layout_marginLeft="10dp"
            android:onClick="doBack"
            android:layout_width="25dp"
            android:layout_height="25dp" />
        <TextView
            android:textColor="#ffffff"
            android:text="@string/register_user"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="20dp"
        android:id="@+id/til1"
        android:layout_below="@+id/rll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:drawableRight="@drawable/ic_clear_24dp"
            android:hint="@string/name"
            android:textSize="18sp"
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="20dp"
        android:id="@+id/til2"
        android:layout_below="@+id/til1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="textPassword"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:drawableRight="@drawable/ic_clear_24dp"
            android:textSize="18sp"
            android:hint="@string/passwordco"
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="20dp"
        android:id="@+id/til3"
        android:layout_below="@+id/til2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="textPassword"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:drawableRight="@drawable/ic_clear_24dp"
            android:textSize="18sp"
            android:hint="@string/passwordconf"
            android:id="@+id/et_sure_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/rl_sex"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/til3"
        android:layout_height="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textColor="@android:color/black"
                android:layout_marginLeft="4dp"
                android:id="@+id/text_sex"
                android:textSize="18sp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:id="@+id/register_sex"
                android:layout_toRightOf="@+id/text_sex"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/text_sex">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/man"
                    android:textSize="18sp"
                    android:checked="true"
                    android:id="@+id/radioMale"
                     />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/woman"
                    android:textSize="18sp"
                    android:layout_marginLeft="40dp"
                    android:id="@+id/radioFaMale"
                     />

            </RadioGroup>
        </RelativeLayout>
    </RelativeLayout>
    <Button
        android:textColor="#ffffff"
        android:id="@+id/btn_complete"
        android:layout_centerHorizontal="true"
        android:text="@string/complete"
        android:textSize="16sp"
        android:layout_below="@+id/rl_sex"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_login_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
