<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/rl_corners"
    xmlns:br="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_width="230dp"
        android:layout_height="150dp">

        <com.zsg.jx.lightcontrol.view.BorderRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            br:needBottomBorder="true"
            br:borderStrokeWidth="3"
            br:needTopBorder="false"
            android:id="@+id/rl_addgatway"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_gatway"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:id="@+id/textView17"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </com.zsg.jx.lightcontrol.view.BorderRelativeLayout>

        <com.zsg.jx.lightcontrol.view.BorderRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rl_addlamps"
            br:needBottomBorder="true"
            br:borderStrokeWidth="3"
            br:needTopBorder="false"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/add_lights"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:id="@+id/textView18"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </com.zsg.jx.lightcontrol.view.BorderRelativeLayout>

        <com.zsg.jx.lightcontrol.view.BorderRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rl_permisson"
            br:needBottomBorder="true"
            br:borderStrokeWidth="3"
            br:needTopBorder="false"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_permisson"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:id="@+id/textView19"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </com.zsg.jx.lightcontrol.view.BorderRelativeLayout>
    </LinearLayout>

</RelativeLayout>